# GithubRecommender

./: .gitignore  GithubRecommender.cabal  LICENSE  README.md  build.sbt
app/: Main.hs
project/: Dependencies.scala
src/: TestApplication.hs
src/DataLoader/: GithubAPI.hs  GithubArchive.hs
src/DataLoader/GithubAPI/: Client.hs  TokenAuthentication.hs  Types.hs
src/DataLoader/Services/: RepositoryData.hs  RepositoryEvents.hs  Types.hs
src/DataLoader/Services/RepositoryData/: Default.hs
src/DataMining/DataSource/: Types.hs  Worker.hs
src/DataMining/DataSource/RepositoryData/: DefaultDataSource.hs  Types.hs
src/DataMining/DataSource/RepositoryData/GithubAPI/: Client.hs  TokenAuthentication.hs
src/DataMining/DataSource/RepositoryEvents/: Default.hs  DefaultDataSource.hs  Source.hs  Types.hs
src/DataMining/DataSource/RepositoryEvents/GithubArchive/: Download.hs
src/Internal/: Types.hs
src/it/scala/github/projects/loader/: ApiIOLoaderSpec.scala  ArchiveIOLoaderSpec.scala  EntityLoaderIoSpec.scala  GithubApiLoaderIoSpec.scala  GithubArchiveLoaderIoSpec.scala
src/it/scala/github/projects/reader/: GithubApiReaderIoSpec.scala  GithubArchiveReaderIoSpec.scala
src/it/scala/github/projects/writer/: EntityWriterIoSpec.scala  OntologyWriterIoSpec.scala  RepositoryWriterIoSpec.scala  package.scala
src/main/scala/github/projects/: Deduplicate.scala  Entitize.scala  ProjectStream.scala
src/main/scala/github/projects/data/: Event.scala  Language.scala  RepositoryInfo.scala  Topic.scala  package.scala
src/main/scala/github/projects/loader/: EntityLoader.scala  GithubApiLoader.scala  GithubArchiveLoader.scala
src/main/scala/github/projects/reader/: EntityLoader.scala  GithubApiReader.scala  GithubArchiveLoader.scala  GithubArchiveReader.scala
src/main/scala/github/projects/util/: Labelled.scala  Log.scala  ParallelTraverse.scala
src/main/scala/github/projects/writer/: EntityWriter.scala  OntologyWriter.scala  RepositoryInfoWriter.scala  RepositoryWriter.scala
src/sql/: create_tables.sql
src/test/scala/github/projects/: EntitizeSpec.scala
src/test/scala/github/projects/loader/: EntityLoaderSpec.scala
src/test/scala/github/projects/reader/: EntityReaderSpec.scala
