name:                GithubRecommender
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/certainty/GithubRecommender#readme
license:             BSD3
license-file:        LICENSE
author:              pheymann, certainty
maintainer:          none@example.com
copyright:           certainty 2016
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Internal.Types
                     , DataMining.DataSource.RepositoryData.DefaultDataSource
                     , TestApplication

  other-modules:       DataMining.DataSource.Types
                     , DataMining.DataSource.RepositoryData.GithubAPI.Client
                     , DataMining.DataSource.RepositoryData.GithubAPI.TokenAuthentication
                     , DataMining.DataSource.RepositoryData.Types

  -- exposed-modules:     DataLoader.GithubArchive
  --                    , DataLoader.GithubAPI.TokenAuthentication
  --                    , DataLoader.GithubAPI.Client
  --                    , DataLoader.Services.Types
  --                    , DataLoader.Services.RepositoryEvents
  --                    , DataLoader.Services.RepositoryData
  --                    , DataLoader.Services.RepositoryData.Default
  --                    , DataLoader.Worker
  --                    , TestApplication

  build-depends:       aeson >= 1.1
                     , lens-aeson
                     , lens
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , download
                     , persistent-sqlite
                     , persistent
                     , esqueleto
                     , sqlite-simple
                     , containers >= 0.5
                     , unordered-containers >= 0.2
                     , http-client >= 0.5.7.0
                     , http-client-tls >= 0.3
                     , http-media >= 0.6
                     , network-uri >= 2.6
                     , mtl >= 2.2
                     , servant
                     , servant-client
                     , text >= 1.2
                     , time >= 1.6
                     , heredoc
                     , transformers >= 0.5
                     , transformers-compat >= 0.5
                     , transient
                     , stm >= 2.4
                     , stm-chans >= 3.0
                     , random >= 1.1
                     , vector
                     , zlib >= 0.6

  default-language:    Haskell2010

executable GithubRecommender-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GithubRecommender
  default-language:    Haskell2010

test-suite GithubRecommender-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , GithubRecommender
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/certainty/GithubRecommender
